unpackaged/main/default/objects/Account_Marketing_Program__c/fields/Account_Affiliation_External_Key__c.field-meta.xml
<CustomField>
    <fullName>Account_Affiliation_External_Key__c</fullName>
    <externalId>true</externalId>
    <label>Account Affiliation External Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>