unpackaged/main/default/objects/Account_Marketing_Program__c/fields/Removed_By__c.field-meta.xml
<CustomField>
    <fullName>Removed_By__c</fullName>
    <formula>IF( 
(NOT(ISNULL(Date_Removed__c))) ,(LastModifiedBy.FirstName + &quot;  &quot; + LastModifiedBy.LastName),NULL)</formula>
    <label>Removed By</label>
    <type>Text</type>
</CustomField>