unpackaged/main/default/objects/Account_Marketing_Program__c/validationRules/Restrict_FS_Accounts_Marketing_Programs.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_FS_Accounts_Marketing_Programs</fullName>
    <active>false</active>
    <description>Fixed Site Accounts should not be assigned Marketing Programs. This rule prevents a user from changing an Account Marketing Program assigned to a Mobile Account to a FS Account.</description>
    <errorConditionFormula>Account__r.RecordType.Name = &quot;Fixed Site Account&quot;</errorConditionFormula>
    <errorMessage>Marketing Programs may only be assigned to Mobile Accounts.</errorMessage>
</ValidationRule>